@@ -1,3 +1,12 @@
+Thu Jul 13 08:56:10 2006  George (Jiri) Lebl <jirka@5z.com>
+
+	* src/eval.c: fix leaks
+
+	* src/matrix.c: zero out matrix data to init it
+
+	* lib/linear_algebra/linear_algebra.gel: simplify NonPivotColumns a
+	  tiny bit
+
 Thu Jul 13 01:32:55 2006  George (Jiri) Lebl <jirka@5z.com>
 
 	* src/eval.[ch], src/matrixw.c, src/matrix.c: Fix a whole bunch of
